--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,13 @@
               </a>
             </h1>
             <ul class="hidden w-8/12 md:flex items-center justify-center space-x-8">
-              <a href="shop.html"
-                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Shop/Plakater</a>
+              <li>
+                <a href="plakater.html"
+                  class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Shop/Plakater</a>
+              </li>
+              <li>
+                <a href="litteratur.html"
+                  class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Shop/Litteratur</a>
               </li>
               <li>
                 <a href="inspiration.html"
@@ -158,7 +163,7 @@
                 </a>
               </li>
               <li>
-                <a href="shop.html"
+                <a href="plakater.html"
                   class=" flex items-center justify-between hover:underline text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800">
                   Shop/plakater
                   <div>
@@ -354,7 +359,7 @@
         </div>
         <div class="sm:ml-0 ml-8 flex flex-col">
           <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
-          <a href="shop.html"
+          <a href="plakater.html"
             class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Shop/plakater</a>
           <a href="inspiration.html"
             class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Inspiration</a>
