--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -65,19 +65,24 @@
                             </a>
                         </h1>
                         <ul class="hidden w-8/12 md:flex items-center justify-center space-x-8">
-                            <a href="shop.html"
+                            <li>
+                              <a href="plakater.html"
                                 class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Shop/Plakater</a>
                             </li>
                             <li>
-                                <a href="inspiration.html"
-                                    class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Inspiration</a>
+                              <a href="litteratur.html"
+                                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Shop/Litteratur</a>
                             </li>
                             <li>
-                                <a href="om.html"
-                                    class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Om
-                                    os</a>
+                              <a href="inspiration.html"
+                                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Inspiration</a>
                             </li>
-                        </ul>
+                            <li>
+                              <a href="om.html"
+                                class=" text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800 hover:underline">Om
+                                os</a>
+                            </li>
+                          </ul>
 
                         <div class="md:w-2/12 justify-end flex items-center space-x-4 xl:space-x-8">
                             <div class="hidden lg:flex items-center">
@@ -180,7 +185,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="shop.html"
+                                <a href="plakater.html"
                                     class=" flex items-center justify-between hover:underline text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800">
                                     Shop/plakater
                                     <div>
@@ -266,7 +271,7 @@
         <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
             <div class="max-w-sm mx-auto">
                 <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
-                    Plakater</h1>
+                    Litteratur</h1>
                 <p class="text-center pt-8">
                     Her finder du vores udvalg af flotte kunstplakater, klar til at komme op og hænge på din væg;-)
                 </p>
@@ -628,7 +633,7 @@
                 </div>
                 <div class="sm:ml-0 ml-8 flex flex-col">
                     <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
-                    <a href="shop.html"
+                    <a href="plakater.html"
                         class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Shop/plakater</a>
                     <a href="inspiration.html"
                         class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Inspiration</a>
