--- a/src/index.html
+++ b/src/index.html
@@ -238,16 +238,30 @@
       <!-- Hero -->
       <div class="flex flex-col justify-center">
         <div class="relative">
-          <img class="hidden sm:block w-full" src="content/lunefuld-lykke-header.jpg" alt="plakat i stue" />
-          <img class="sm:hidden w-full" src="content/lunefuld-lykke-header.jpg" alt="plakat i stue" />
-          <div
+          <a href="plakater.html">
+            <img class="hidden sm:block w-full" src="content/lunefuld-lykke-header.jpg" alt="plakat i stue" />
+            <img class="sm:hidden w-full" src="content/lunefuld-lykke-header.jpg" alt="plakat i stue" />
+            <div
             class="absolute sm:bottom-8 bottom-4 sm:top-8 top-4 pr-10 sm:pr-0 left-4 sm:left-8 flex justify-self-center items-center">
-            <p
+              <p
               class="text-3xl sm:text-6xl xl:text-7xl 2xl:text-8xl font-semibold leading-9 text-white max-w-sm text-shadow">
-              Lunefuld Lykke -
-              Stemningsfulde plakater
-            </p>
-          </div>
+                Stemningsfulde plakater
+              </p>
+            </div>
+          </a>
+        </div>
+        <div class="relative">
+          <a href="litteratur.html">
+            <img class="hidden sm:block w-full" src="content/litteratur_hero.jpg" alt="plakat i stue" />
+            <img class="sm:hidden w-full" src="content/litteratur_hero.jpg" alt="plakat i stue" />
+            <div
+            class="absolute sm:bottom-8 bottom-4 sm:top-8 pr-2 top-4 right-4 sm:right-8 flex justify-center items-center">
+              <p
+              class="text-3xl text-right sm:text-6xl xl:text-7xl 2xl:text-8xl font-semibold leading-9 text-white max-w-sm text-shadow">
+                Lækker litteratur
+              </p>
+            </div>
+          </a>
         </div>
       </div>
       <!-- Hero slut -->
@@ -275,11 +289,11 @@
         <div
           class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
           <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
-              src="content/poster-byen.jpg" alt="sofa-4" /></a>
+              src="content/rucksack_af_bernard_dubois.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
               <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
-                Plakater med byen i fokus</p>
+                "Rucksack" af Bernard Dubois</p>
             </div>
             <div>
               <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
@@ -292,11 +306,11 @@
         <div
           class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
           <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
-              src="content/minimalisme-poster.jpg" alt="sofa-4" /></a>
+              src="content/streets_of_new_york_af_denise_richards.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
               <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
-                Minimalistiske plakater</p>
+                "Streets of New York" af Denise Richards</p>
             </div>
             <div>
               <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
