--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -199,6 +199,17 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="plakater.html"
+                                  class=" flex items-center justify-between hover:underline text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800">
+                                  Shop/litteratur
+                                  <div>
+                                    <img class="" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/navigation-I-svg7.svg" alt="arrow">
+                                    <img class=" hidden" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/navigation-I-svg7dark.svg"
+                                      alt="arrow">
+                                  </div>
+                                </a>
+                              </li>
+                            <li>
                                 <a href="inspiration.html"
                                     class=" flex items-center justify-between hover:underline text-base text-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-800">
                                     Inspiration
