litteratur singe view

--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -294,7 +294,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-6 lg:gap-8 mt-8 md:mt-10">
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-4.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -306,7 +306,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-23.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -318,7 +318,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -330,7 +330,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-2.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -342,7 +342,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-3.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -354,7 +354,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-24.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -366,7 +366,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-5.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -378,7 +378,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-6.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -390,7 +390,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-7.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -402,7 +402,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-8.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -414,7 +414,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-9.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -426,7 +426,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-11.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -438,7 +438,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-10.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -450,7 +450,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-12.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -462,7 +462,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-13.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -474,7 +474,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-14.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -486,7 +486,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-22.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -498,7 +498,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-15.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -510,7 +510,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-16.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -522,7 +522,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-17.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -534,7 +534,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-18.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -546,7 +546,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-19.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -558,7 +558,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-20.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -570,7 +570,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-21.jpg" alt="Flot plakat" role="img" />
                         </div>
