--- a/src/produkt_bog.html
+++ b/src/produkt_bog.html
@@ -284,7 +284,7 @@
                 <ol role="list" class="max-w-2xl mx-auto px-4 flex items-center space-x-2 sm:px-6 lg:max-w-7xl lg:px-8">
                     <li>
                         <div class="flex items-center">
-                            <a href="#" class="mr-2 text-sm font-medium text-gray-900"><a href="plakater.html"> Plakater
+                            <a href="#" class="mr-2 text-sm font-medium text-gray-900"><a href="litteratur.html"> Litteratur
                                 </a>
                                 <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor"
                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-5 text-gray-300">
@@ -293,7 +293,7 @@
                         </div>
                     </li>
 
-                    <li>
+                    <!-- <li>
                         <div class="flex items-center">
                             <a href="#" class="mr-2 text-sm font-medium text-gray-900"><a
                                     href="kategori.html">Naturen</a> </a>
@@ -302,11 +302,11 @@
                                 <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
                             </svg>
                         </div>
-                    </li>
+                    </li> -->
 
                     <li class="text-sm">
                         <a href="#" aria-current="page" class="font-medium text-gray-500 hover:text-gray-600">
-                            Højt på en gren </a>
+                            Københavnerbilleder </a>
                     </li>
                 </ol>
             </nav>
@@ -314,15 +314,15 @@
             <!-- Image gallery -->
             <div class="mt-6 max-w-2xl mx-auto sm:px-6 lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
                 <div class="hidden aspect-w-3 aspect-h-4 overflow-hidden lg:block">
-                    <img src="content/posters/poster-3.jpg" alt="Højt på en gren"
+                    <img src="content/kobenhavnerbilleder_aaben_venstre.jpg" alt="Højt på en gren"
                         class="w-full h-full object-center object-cover">
                 </div>
                 <div class="hidden aspect-w-3 aspect-h-4 overflow-hidden lg:block">
-                    <img src="content/kalvebod-poster-vaeg.jpg" alt="Højt på en gren"
+                    <img src="content/kobenhavnerbilleder_oppefra.jpg" alt="Højt på en gren"
                         class="w-full h-full object-center object-cover">
                 </div>
                 <div class="aspect-w-4 aspect-h-5 sm:overflow-hidden lg:aspect-w-3 lg:aspect-h-4">
-                    <img src="content/kalvebod-poster.jpg" alt="Højt på en gren"
+                    <img src="content/kobenhavnerbilleder-sten-simons.jpg" alt="Højt på en gren"
                         class="w-full h-full object-center object-cover">
                 </div>
             </div>
@@ -331,14 +331,14 @@
             <div
                 class="max-w-2xl mx-auto pt-10 pb-16 px-4 sm:px-6 lg:max-w-7xl lg:pt-16 lg:pb-24 lg:px-8 lg:grid lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8">
                 <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
-                    <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Højt på en gren / Edgar
-                        Poe</h1>
+                    <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Københavnerbilleder - en guide til hipster foto</h1>
+                    <h3 class="text-xl mt-7 tracking-tight text-gray-900 sm:text-xl">Af Sten Simons</h3>
                 </div>
 
                 <!-- Options -->
                 <div class="mt-4 lg:mt-0 lg:row-span-3">
                     <h2 class="sr-only">Product information</h2>
-                    <p class="text-3xl text-gray-900">Fra 299.-</p>
+                    <p class="text-3xl text-gray-900">399,-</p>
 
                     <!-- Reviews -->
                     <div class="mt-6">
@@ -392,17 +392,17 @@
 
                     <form class="mt-10">
                         <!-- Colors -->
-                        <div>
+                        <!-- <div>
                             <h3 class="text-sm text-gray-900 font-medium">Passepartout-farve</h3>
 
                             <fieldset class="mt-4">
                                 <legend class="sr-only">Vælg farve</legend>
-                                <div class="flex items-center space-x-3">
+                                <div class="flex items-center space-x-3"> -->
                                     <!--
                         Active and Checked: "ring ring-offset-1"
                         Not Active and Checked: "ring-2"
                       -->
-                                    <label
+                                    <!-- <label
                                         class="-m-0.5 relative p-0.5 rounded-full flex items-center justify-center cursor-pointer focus:outline-none ring-red-400 ring ring-offset-1">
                                         <input type="radio" name="color-choice" value="White"
                                             class="sr-only ring ring-offset-1" aria-labelledby="color-choice-0-label">
@@ -410,25 +410,25 @@
                                         <span aria-hidden="true"
                                             class="h-8 w-8 bg-white border border-black border-opacity-10 rounded-full"></span>
                                     </label><span>Ingen
-                                        passerpartout </span>
+                                        passerpartout </span> -->
                                     <!--
                         Active and Checked: "ring ring-offset-1"
                         Not Active and Checked: "ring-2"
                       -->
-                                    <label
+                                    <!-- <label
                                         class="-m-0.5 relative p-0.5 rounded-full flex items-center justify-center cursor-pointer focus:outline-none ring-gray-400">
                                         <input type="radio" name="color-choice" value="White" class="sr-only"
                                             aria-labelledby="color-choice-0-label">
                                         <p id="color-choice-0-label" class="sr-only">Hvid</p>
                                         <span aria-hidden="true"
                                             class="h-8 w-8 bg-white border border-black border-opacity-10 rounded-full"></span>
-                                    </label>
+                                    </label> -->
 
                                     <!--
                         Active and Checked: "ring ring-offset-1"
                         Not Active and Checked: "ring-2"
                       -->
-                                    <label
+                                    <!-- <label
                                         class="-m-0.5 relative p-0.5 rounded-full flex items-center justify-center cursor-pointer focus:outline-none ring-gray-900">
                                         <input type="radio" name="color-choice" value="Black" class="sr-only"
                                             aria-labelledby="color-choice-2-label">
@@ -438,7 +438,7 @@
                                     </label>
                                 </div>
                             </fieldset>
-                        </div>
+                        </div> -->
 
                         <!-- Sizes -->
                         <div class="mt-10">
@@ -454,7 +454,7 @@
                                         class="group relative border  py-3 px-4 flex items-center justify-center text-sm text-center font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-gray-50 text-gray-200 cursor-not-allowed">
                                         <input type="radio" name="size-choice" value="35x50" disabled class="sr-only"
                                             aria-labelledby="size-choice-0-label">
-                                        <p id="size-choice-0-label">35 x 50 <br> udsolgt</p>
+                                        <p id="size-choice-0-label">Paperback <br> udsolgt</p>
 
                                         <div aria-hidden="true"
                                             class="absolute -inset-px border-2 border-gray-200 pointer-events-none">
@@ -471,7 +471,7 @@
                                         class="group relative border  py-3 px-4 flex items-center justify-center text-sm text-center font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer ring-2 ring-indigo-500">
                                         <input type="radio" name="size-choice" value="70x100" class="sr-only"
                                             aria-labelledby="size-choice-1-label">
-                                        <p id="size-choice-1-label">70<br> x <br>100</p>
+                                        <p id="size-choice-1-label">Hardback</p>
 
                                         <!--
                           Active: "border", Not Active: "border-2"
@@ -481,34 +481,34 @@
                                     </label>
 
                                     <!-- Active: "ring-2 ring-indigo-500" -->
-                                    <label
+                                    <!-- <label
                                         class="group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
                                         <input type="radio" name="size-choice" value="100x140" class="sr-only"
                                             aria-labelledby="size-choice-2-label">
-                                        <p id="size-choice-2-label">100<br> x <br>140</p>
+                                        <p id="size-choice-2-label">100<br> x <br>140</p> -->
 
                                         <!--
                           Active: "border", Not Active: "border-2"
                           Checked: "border-indigo-500", Not Checked: "border-transparent"
                         -->
-                                        <div class="absolute -inset-px rounded-md pointer-events-none"
+                                        <!-- <div class="absolute -inset-px rounded-md pointer-events-none"
                                             aria-hidden="true"></div>
-                                    </label>
+                                    </label> -->
 
                                     <!-- Active: "ring-2 ring-indigo-500" -->
-                                    <label
+                                    <!-- <label
                                         class="group relative border rounded-md py-3 px-4 flex items-center justify-center text-sm font-medium uppercase hover:bg-gray-50 focus:outline-none sm:flex-1 sm:py-6 bg-white shadow-sm text-gray-900 cursor-pointer">
                                         <input type="radio" name="size-choice" value="140x200" class="sr-only"
                                             aria-labelledby="size-choice-3-label">
-                                        <p id="size-choice-3-label">140<br> x <br>200</p>
+                                        <p id="size-choice-3-label">140<br> x <br>200</p> -->
 
                                         <!--
                           Active: "border", Not Active: "border-2"
                           Checked: "border-indigo-500", Not Checked: "border-transparent"
                         -->
-                                        <div class="absolute -inset-px rounded-md pointer-events-none"
+                                        <!-- <div class="absolute -inset-px rounded-md pointer-events-none"
                                             aria-hidden="true"></div>
-                                    </label>
+                                    </label> -->
 
                                 </div>
                             </fieldset>
@@ -526,38 +526,34 @@
                         <h3 class="sr-only">Description</h3>
 
                         <div class="space-y-6">
-                            <p class="text-base text-gray-900">En af vores husfotografer, Edgar Poe tog sig en frisk
-                                morgentur på Amager Fælled. Han følte sig lidt omtåget efter en lang nat på vinbaren, og
-                                vupti: En krage satte sig på toppen af et egetræ og skrattede "Aldrigmer". Edgar tog sit
-                                kamera frem og knipsede.</p>
+                            <p class="text-base text-gray-900">Københavnerbilleder er de danske streetfotografers bibel: Det er en fusion mellem et kunstværk og en lærebog. Bogen gennemgår alle væsentlige aspekter af streetfotografering fra grundlæggende teknik til kreative eksperimenter. Alt sammen krydret med masser af inspirerende fotos. God læselyst!	 </p>
                         </div>
                     </div>
 
                     <div class="mt-10">
-                        <h3 class="text-sm font-medium text-gray-900">Highlights</h3>
+                        <h3 class="text-base font-medium text-gray-900">Stamdata for bogen</h3>
 
                         <div class="mt-4">
                             <ul role="list" class="pl-4 list-disc text-sm space-y-2">
-                                <li class="text-gray-400"><span class="text-gray-600">Printet på 300 mg fotopapir</span>
-                                </li>
-
-                                <li class="text-gray-400"><span class="text-gray-600">Fås i to versioner - med og uden
-                                        passepartout
-                                        colors</span></li>
-
-                                <li class="text-gray-400"><span class="text-gray-600">Foto af Edgar Poe, 2022</span>
-                                </li>
-
+                                <li class="text-gray-400"><span class="text-gray-600">Titel: Københavnerbilleder - en guide til hipster foto
+                                </span></li>
+                                <li class="text-gray-400"><span class="text-gray-600">Forfatter: Sten Simons</span></li>
+                                <li class="text-gray-400"><span class="text-gray-600">Antal sider: 344</span></li>
+                                <li class="text-gray-400"><span class="text-gray-600">Forlag: Mellem Linjerne</span></li>
+                                <li class="text-gray-400"><span class="text-gray-600">ISBN: 987-6-987654-32-1</span></li>
                             </ul>
                         </div>
                     </div>
 
                     <div class="mt-10">
-                        <h2 class="text-sm font-medium text-gray-900">Yderligere info</h2>
+                        <h2 class="text-base font-medium text-gray-900">Om forfatteren</h2>
 
                         <div class="mt-4 space-y-6">
-                            <p class="text-sm text-gray-600">Ramme følger ikke med, men passer til standard-rammer fra
-                                IKEA og Jysk.</p>
+                            <p class="text-sm text-gray-600">Sten Simons har en lang foto-karriere bag sig. Det hele startede i 00’erne, da han gik rundt i Pisserenden for at fotografere ungdommens forfald. Det ledte til en række udstillinger, og blev senere til hans først fotobog “Ungdomsdruk - pinlige billeder fra nattelivet”.
+                                <br>
+                                Derefter tog karrieren fart: han blev fotojournalist og dokumenterede en masse dagligdagsstof fra Amager på dagbladet “Amagerkaneren”.
+                                <br>
+                                Sideløbende begyndte han at undervise i foto, og har skrevet et utal af bøger, herunder bestsellerne Scener fra S-toget, Brun mad - en visuel odysse, og lærebogen Fotografering for evnesvage.</p>
                         </div>
                     </div>
                 </div>
