loop view single view litteratur fixed

--- a/src/plakater.html
+++ b/src/plakater.html
@@ -284,7 +284,7 @@
                 <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
                     Plakater</h1>
                 <p class="text-center pt-8">
-                    Her finder du vores udvalg af flotte kunstplakater, klar til at komme op og hænge på din væg;-)
+                    Her finder du vores udvalg af flotte kunstplakater, klar til at komme op og hænge på din væg.
                 </p>
                 <p class="text-base leading-normal sm:leading-4 text-center pt-8">Kategorier: <a href="kategori.html"
                         class="underline">Naturen</a> / <a href="kategori.html" class="underline">Byen</a>
