--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -284,19 +284,19 @@
                 <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
                     Litteratur</h1>
                 <p class="text-center pt-8">
-                    Her finder du vores udvalg af flotte kunstplakater, klar til at komme op og hænge på din væg;-)
+                    Her finder du vores udvalg af spændende og lærerig fotolitteratur spækket med flotte billeder.
                 </p>
-                <p class="text-base leading-normal sm:leading-4 text-center pt-8">Kategorier: <a href="kategori.html"
+                <!-- <p class="text-base leading-normal sm:leading-4 text-center pt-8">Kategorier: <a href="kategori.html"
                         class="underline">Naturen</a> / <a href="kategori.html" class="underline">Byen</a>
                     / <a href="kategori.html" class="underline">Sort/hvid</a> / <a href="kategori.html"
-                        class="underline">Minimalisme</a></p>
+                        class="underline">Minimalisme</a></p> -->
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-6 lg:gap-8 mt-8 md:mt-10">
 
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-4.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/kobenhavnerbilleder-sten-simons.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -308,7 +308,7 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-23.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/the_unsplash_book_af_unsplash_community.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -320,7 +320,7 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/the_polaroid_book_af_barbara_hitchcock.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -332,7 +332,7 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-2.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/read_this_if_you_want_to_take_great_photographs_af_henry_carroll.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -344,7 +344,7 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-3.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/photographers_trouble_shooter_af_michael_freeman.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -356,7 +356,7 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-24.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/rucksack_af_bernard_dubois.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -368,7 +368,7 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-5.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/thought_catalog_magazine.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -380,7 +380,7 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-6.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/destination_pisserenden_af_bent_hubert.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -392,7 +392,7 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-7.jpg" alt="Flot plakat" role="img" />
+                            <img class="" src="content/streets_of_new_york_af_denise_richards.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
                     <div class="">
@@ -401,189 +401,8 @@
                     </div>
                 </div>
 
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-8.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Holbæk / Tom Jørgensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-9.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">De polske alper / Milla Jankovic</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-11.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Vestenvind / Turid Dagstad</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 499.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-10.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Farvestik / Peter McLean</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-12.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Pink / Chong Wang</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-13.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Ørken / Jill Meyers</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-14.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Semi-invers / Roger Christensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-22.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Himmelbjerget / Tom Jørgensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 99.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-15.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Vesterhavet / Tom Jørgensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-16.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Fugleflugt / Søren Mørkberg</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-17.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Golden Gate / Jill Meyers</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 249.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-18.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">På vej til Grisefest / Tom Jørgensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-19.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Skotland / Peter McLean</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-20.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Færøerne I / Turid Dagstad</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-
-                <div class="bg-gray-50  p-8">
-                    <a href="produkt_bog.html">
-                        <div class="flex justify-center items-center mt-4 md:mt-4">
-                            <img class="" src="content/posters/poster-21.jpg" alt="Flot plakat" role="img" />
-                        </div>
-                    </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Færøerne II / Turid Dagstad</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
-                    </div>
-                </div>
-            </div>
-
             <!-- previous/next -->
-            <div class="flex justify-center items-end mt-12">
+            <div class="flex justify-center items-center mt-12">
                 <div class="flex flex-row items-center justify-center space-x-8">
                     <button
                         class="text-base leading-none text-gray-800  border-b-2 border-transparent focus:outline-none focus:border-gray-800">
@@ -604,11 +423,7 @@
                 </div>
             </div>
             <!-- previous/next slut -->
-
         </div>
-
-
-
     </div>
     <!-- Content slut-->
 
