--- a/src/produkt_plakat.html
+++ b/src/produkt_plakat.html
@@ -331,8 +331,8 @@
             <div
                 class="max-w-2xl mx-auto pt-10 pb-16 px-4 sm:px-6 lg:max-w-7xl lg:pt-16 lg:pb-24 lg:px-8 lg:grid lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8">
                 <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
-                    <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Højt på en gren / Edgar
-                        Poe</h1>
+                    <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Højt på en gren</h1>
+                    <h3 class="text-xl mt-7 tracking-tight text-gray-900 sm:text-xl">Af Edgar Poe</h3>
                 </div>
 
                 <!-- Options -->
@@ -534,7 +534,7 @@
                     </div>
 
                     <div class="mt-10">
-                        <h3 class="text-sm font-medium text-gray-900">Highlights</h3>
+                        <h3 class="text-base font-medium text-gray-900">Highlights</h3>
 
                         <div class="mt-4">
                             <ul role="list" class="pl-4 list-disc text-sm space-y-2">
@@ -553,7 +553,7 @@
                     </div>
 
                     <div class="mt-10">
-                        <h2 class="text-sm font-medium text-gray-900">Yderligere info</h2>
+                        <h2 class="text-base font-medium text-gray-900">Yderligere info</h2>
 
                         <div class="mt-4 space-y-6">
                             <p class="text-sm text-gray-600">Ramme følger ikke med, men passer til standard-rammer fra
