--- a/src/kategori.html
+++ b/src/kategori.html
@@ -294,7 +294,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-6 lg:gap-8 mt-8 md:mt-10">
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-4.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -306,7 +306,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-23.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -319,7 +319,7 @@
 
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-3.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -331,7 +331,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-24.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -343,7 +343,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-5.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -355,7 +355,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-6.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -367,7 +367,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-7.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -379,7 +379,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-8.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -391,7 +391,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-9.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -404,7 +404,7 @@
 
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-10.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -418,7 +418,7 @@
 
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-13.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -430,7 +430,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-14.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -442,7 +442,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-22.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -454,7 +454,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-15.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -466,7 +466,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-16.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -478,7 +478,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-17.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -490,7 +490,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-18.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -502,7 +502,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-19.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -514,7 +514,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-20.jpg" alt="Flot plakat" role="img" />
                         </div>
@@ -526,7 +526,7 @@
                 </div>
 
                 <div class="bg-gray-50  p-8">
-                    <a href="produkt.html">
+                    <a href="produkt_plakat.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/posters/poster-21.jpg" alt="Flot plakat" role="img" />
                         </div>
