--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,7 @@
 
         <div
           class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
-          <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
+          <a href="plakater.html"><img class="group-hover:opacity-60 transition duration-500"
               src="content/trae-poster.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
@@ -299,7 +299,7 @@
 
         <div
           class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
-          <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
+          <a href="litteratur.html"><img class="group-hover:opacity-60 transition duration-500"
               src="content/rucksack_af_bernard_dubois.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
@@ -316,7 +316,7 @@
 
         <div
           class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
-          <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
+          <a href="litteratur.html"><img class="group-hover:opacity-60 transition duration-500"
               src="content/streets_of_new_york_af_denise_richards.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
@@ -333,7 +333,7 @@
 
         <div
           class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
-          <a href="kategori.html"><img class="group-hover:opacity-60 transition duration-500"
+          <a href="plakater.html"><img class="group-hover:opacity-60 transition duration-500"
               src="content/poster-sort-hvid.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
